Version: 2.6.0
Game Versions: v1.0.0,v1.0.1,v1.0.2
* StoryMode is now an optional dependency
* Support for including save file and screenshot with a local crash report
* MiniDump inclusion decision moved from settings to the crash report
* Better SubSystem descriptions
* Added Ben.Demystifier for better exceptions
---------------------------------------------------------------------------------------------------
Version: 2.5.1
Game Versions: v1.0.0,v1.0.1
* Fixed DelayedSubModuleManager check
---------------------------------------------------------------------------------------------------
Version: 2.5.0
Game Versions: v1.0.0,v1.0.1
* Extended DelayedSubModuleManager with a non generic variant
---------------------------------------------------------------------------------------------------
Version: 2.4.1
Game Versions: v1.0.0
* Removed unnecessary collision for HotKeys
* Better explanation of why a crash report failed to upload
---------------------------------------------------------------------------------------------------
Version: 2.4.0
Game Versions: v1.0.0
* HotKey system overhaul
---------------------------------------------------------------------------------------------------
Version: 2.3.6
Game Versions: v1.0.0
* Disabled "Catch Native->Managed Code Exceptions", seems to be causing issues for some players
---------------------------------------------------------------------------------------------------
Version: 2.3.5
Game Versions: v1.0.0
* Fixed CTD when failing to serialize ButterLib's settings
---------------------------------------------------------------------------------------------------
Version: 2.3.4
Game Versions: v1.0.0
* Another potential CTD fix
---------------------------------------------------------------------------------------------------
Version: 2.3.3
Game Versions: v1.0.0
* Added "Catch Native->Managed Code Exceptions"
* Fixed path being incorrect